Add new search functions and lots of tests